# ArbeitSoftware

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: ArbeitSoftware.cpp  ArbeitSoftware.h  alternative.cpp  alternative.h
